# University-Course-Management-System

./: .gitignore  CMakeLists.txt  Makefile  README.md  file1.cpp  main.cpp
Data/: Courses.txt  Professors.txt  Students.txt
Include/: Counter.h  Course.h  Grades.h  Person.h  Professor.h  Secretary.h  StudManager.h  Student.h
Main/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  Course.cpp  Grades.cpp  Person.cpp  Professor.cpp  Secretary.cpp  StudManager.cpp  Student.cpp  file1.h
